# masking-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.en.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
browser-extension/: CHANGELOG.md  PRIVACY.md  README.md  STORE.md  STORE_DESCRIPTION.md  background.js  content.js  injected.js  manifest.json  manifest.store.json  offscreen.html  offscreen.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  review-modal.js  sidebar.js
browser-extension/engine/: aggregate.js  blocklist.js  bundle.js  categories.js  classification.js  dictionaries.js  engine.js  force-mask.js  llm-prompts.js  onnx-detector.js  patterns.js  severity.js  surrogates.js  user-force-mask.js
browser-extension/scripts/: build-store-zip.sh  generate-icons.py
data/: admin_token  audit.jsonl  runtime_config.json
docs/: privacy-policy.md  requirements_and_design.md  research_notes.md
experiments/: README.md
experiments/privacy-filter-ja/: .gitignore  README.md  categories.yaml  labels.json  pyproject.toml  run_pipeline.sh
experiments/privacy-filter-ja/data/: generator.py  seed.jsonl  seed_builder.py  validate.py
experiments/privacy-filter-ja/data/pools/: cities_jp.txt  company_prefixes.txt  company_stems.txt  company_suffixes.txt  email_domains.txt  given_names_ja.txt  surnames_ja.txt  url_paths.txt
experiments/privacy-filter-ja/eval/: eval.py  test.jsonl
experiments/privacy-filter-ja/publish/: MODEL_CARD.md  push_to_hub.py
experiments/privacy-filter-ja/tests/: test_model_loading.py
experiments/privacy-filter-ja/train/: prepare.py  requirements.txt  train-config.yaml  train.py
plans/: feat-local-llm-proxy-masking-2026-04-16.md
scripts/: build-store.sh  check-sidebar-template.sh  install-autostart.ps1  install-autostart.sh  mcp-stdio.sh  validate_vectors.js
src/app/: config.py  main.py
src/app/models/: schemas.py
src/app/routes/: admin.py  (+3 more)
src/local_mask_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_server/: server.py
store-assets/: README.md
tests/: conftest.py  test_aggregation.py  test_classification.py  test_config.py  test_extension_route.py  test_js_vectors.py  test_language_detection.py  test_masking_service.py  test_severity.py  test_sudachi_analyzer.py
tests/integration/: .gitignore  package.json  test-ml-options-ui.mjs  test-ml-pipeline.mjs
tests/vectors/: address.json  aggregation.json  annual_income.json  api_key.json  bank_account.json  blood_type.json  common_noun_blocklist.json  contract_number.json  db_connection.json  drivers_license.json  email.json  employee_id.json  force_mask_keywords.json  invoice_number.json  ip_address.json  katakana_name.json  member_id.json  my_number.json  passport.json  patient_id.json  phone.json  postal_code.json  purchase_order.json  secret.json  sku.json  url.json
(+19 files in other folders)
